--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "n": "^9.0.1",
-    "node-sass": "^8.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-modal-video": "^1.2.6",
     "react-scripts": "4.0.0",
+    "sass": "^1.58.3",
     "styled-components": "^5.3.8",
     "web-vitals": "^0.2.4"
   },
